error with fixing maven launch, vmargs not function, maven dependencies added and integrated